--- a/wrst/static/style.css
+++ b/wrst/static/style.css
@@ -144,8 +144,8 @@ body {
 }
 
 .timer {
-    height: 85%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
     padding: 0;
     margin: 0;
     display: -webkit-box;
@@ -156,7 +156,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: FranklinGothic, Verdana, Arial, sans-serif;
-    font-size: 120px;
+    font-size: 60px;
     font-weight: bold;
     color: #000;
 }
@@ -182,7 +182,7 @@ body {
 
 @media (min-width: 280px) {
     .timer {
-        font-size: 70px;
+        font-size: 25px;
     }
     .alert-info {
         margin-top: 80px;
@@ -205,7 +205,7 @@ body {
 
 @media (min-width: 980px) {
     .timer {
-        font-size: 120px;
+        font-size: 40px;
     }
 
     .github, .quote {
@@ -215,7 +215,7 @@ body {
 
 @media (min-width: 1200px) {
     .timer {
-        font-size: 150px;
+        font-size: 40px;
     }
 
     .github, .quote {
