added new training slights and did some facelift work

--- a/wrst/templates/instruction_pages.html
+++ b/wrst/templates/instruction_pages.html
@@ -19,7 +19,7 @@
     {% for image in images %}
         <div class="col-md-4">
         <figure>
-            <img src="static/images/{{ image[0]}}" style="width:height:200px;">
+            <img src="static/images/{{ image[0]}}" style="height:150px;">
             <figcaption>{{ image[1]}}</figcaption>
         </figure>
         </div>
