--- a/wrst/templates/instruction_pages.html
+++ b/wrst/templates/instruction_pages.html
@@ -4,13 +4,10 @@
 
     <div class="container">
     <div class="row">
-    <h3>{{ instruction_header }}</h3>
-    <br>
-    <ul>
-    {%  for item in content_items %}
-        <li><h4>{{ item }}</h4</li>
-    {% endfor %}
-    </ul>
+
+        <h3> {{ instruction_header }}</h3>
+        <h4> {{ content_items}} </h4>
+
     </div>
     </div>
 
